deploy/02-deploy/05-endpoints/mqtt/020-Service-mqtt.yaml
kind: Service
apiVersion: v1
metadata:
  name: mqtt-endpoint
  labels:
    app: mqtt-endpoint
spec:
  type: NodePort
  selector:
    app: mqtt-endpoint
  ports:
    - name: endpoint
      protocol: TCP
      port: 443
      targetPort: endpoint
