deploy/02-deploy/05-endpoints/mqtt/030-Route-mqtt.yaml
kind: Route
apiVersion: v1
metadata:
  name: mqtt-endpoint
spec:
  to:
    kind: Service
    name: mqtt-endpoint
  port:
    targetPort: endpoint
  tls:
    termination: passthrough
